# devcap

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  STARTHERE.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
scripts/: setup.sh
src/devcap/: __init__.py  __main__.py  cli.py  formatters.py  profile_loader.py  registry.py  scanner.py
src/devcap/profiles/: devops.toml  full.toml  node-dev.toml  python-dev.toml  rust-dev.toml  sysadmin.toml
tests/: conftest.py  test_cli.py  test_formatters.py  test_profiles.py  test_registry.py  test_scanner.py
