[build-system]
requires = ["setuptools==68.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "devcap"
version = "0.1.0"
description = "Development environment capability scanner. Detects installed tools, reports versions, and flags missing dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Greyforge", email = "admin@greyforge.tech" },
]
keywords = ["devtools", "scanner", "cli", "environment", "audit", "capabilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build==1.4.2",
  "pytest==9.0.2",
  "ruff==0.15.0",
  "twine==6.1.0",
]

[project.scripts]
devcap = "devcap.cli:main"

[project.urls]
Homepage = "https://greyforge.tech"
Repository = "https://github.com/GreyforgeLabs/devcap"
Issues = "https://github.com/GreyforgeLabs/devcap/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devcap = ["profiles/*.toml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
